--- a/ngày 2/index.html
+++ b/ngày 2/index.html
@@ -34,7 +34,7 @@
             position: absolute;
             top: 80px;
             left: 80px;
-            z-index: 2;
+            z-index: 6;
         }
 
     </style>
@@ -48,7 +48,9 @@
         position: relative;
         position: absolute;
         position: fixed; 
-        position: sticky; 
+        position: sticky;
+
+        * khi không có thẻ cha relative thì position con sẽ lấy theo trình duyệt
 
         * z index càng cao thì sẽ ở bên trên 
     </pre>
