--- a/ngày 2/index2.html
+++ b/ngày 2/index2.html
@@ -38,7 +38,7 @@
         chiều cao thực tế : height + border top + border bottom + padding top + padding bottom 
         chiều cao = 150 + 6 + 6 + 20 + 20 = 202 
         => khi viết css cho 1 thẻ việc thêm padding và border vào thay đổi width thực tế và height thực tế 
-        => giải pháp dùng box-sizing
+        => giải pháp dùng box-sizing cố định with và height khi có padding và boder của thẻ
     </pre>
 
     <div class="divA">
