--- a/ngày 2/index3.html
+++ b/ngày 2/index3.html
@@ -49,10 +49,11 @@
         https://www.w3schools.com/html/html_blocks.asp
 
         * block 
-        - thẻ đặc trưng là thẻ div ( có rất thẻ thuộc nhóm này)
+        - thẻ đặc trưng là thẻ div ( có rất nhiều thẻ thuộc nhóm này)
         - thẻ block thì sẽ nằm trên các hàng khác nhau 
-        - thẻ block chiếm toàn bộ độ rộng của thẻ cha ( nếu thẻ block nằm trong thẻ body thì chiếm độ rộng toàn màn hinh )
+        - thẻ block chiếm toàn bộ độ rộng của thẻ cha ( nếu thẻ block nằm trong thẻ body thì chiếm độ rộng toàn màn hình )
         - có thể set width và height cho block 
+        
         * inline 
         - thẻ đặc trưng là thẻ a và span 
         - thẻ inline nằm trên cùng 1 hàng nếu hàng đó còn không gian trống nếu hết không gian thì nó cũng xuống hàng 
