--- a/ngày 2/index4.html
+++ b/ngày 2/index4.html
@@ -31,7 +31,7 @@
     <pre>
         inline-block 
 
-        none ( không hiển thị )
+        none ( không hiển thị,không chiếm chỗ )
 
         * inline-block 
         - giá trị lai kết hợp block và inline 
